--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -2,6 +2,8 @@
 
 <p>{{profile.name}}</p>
 
+<p>logged in</p>
+
 <input ng-model="profile.name"/>
 
 <button ng-click="update()">Update Profile</button>
