--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -11,6 +11,8 @@
 		<img class='port3' src='/images/portfolio3.jpg'>
 		<img class='port4' src='/images/portfolio4.jpg'>
 		<img class='port5' src='/images/portfolio5.jpg'>
+		<img class='port6' src='/images/portfolio6.jpg'>
+		<img class='port7' src='/images/portfolio7.jpg'>
 <!-- 
 		<input text="text" placeholder='Enter Comment Here'></input>
 		<button>submit</button>
