--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 			<h1>Jamie Howard</h1>
 			<ul class="nav nav-pills">
-			  <li role="presentation" class="active"><a href="#/">Home</a></li>
-			  <li role="presentation"><a href="#/about">About</a></li>
+			  <li role="presentation" class="active"><a href="#/about">About</a></li>
+			  <!-- <li role="presentation"><a href="#/about">About</a></li> -->
 			  <li role="presentation"><a href="#/portfolio">Portfolio</a></li>
 			  <li role="presentation"><a href="#/services">Services</a></li>
 			  <li role="presentation"><a href="#/weddings">Weddings</a></li>
