--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -13,6 +13,7 @@
 		<img class='port5' src='/images/portfolio5.jpg'>
 		<img class='port6' src='/images/portfolio6.jpg'>
 		<img class='port7' src='/images/portfolio7.jpg'>
+		<img class='port8' src='/images/portfolio8.jpg'>
 <!-- 
 		<input text="text" placeholder='Enter Comment Here'></input>
 		<button>submit</button>
