--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1>Jamie Howard</h1>
 			<ul class="nav nav-pills">
 			  <li role="presentation" class="active"><a href="#/about">About</a></li>
-			  <!-- <li role="presentation"><a href="#/about">About</a></li> -->
+			  <li role="presentation"><a href="#/about">About</a></li>
 			  <li role="presentation"><a href="#/portfolio">Portfolio</a></li>
 			  <li role="presentation"><a href="#/services">Services</a></li>
 			  <li role="presentation"><a href="#/weddings">Weddings</a></li>
@@ -47,7 +47,6 @@
 	<script src="dashboard/dashboardCtrl.js"></script>
 	<script src="ngServices/authService.js"></script>
 	<script src="ngServices/firebaseService.js"></script>
-	<!-- I WILL NEED TO SETUP ANGULARFIRE WHEN I DO MY FIREBASE BLOG -->
 	</body>
 
 </html>
