updated ng-class for tabs

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 			<h1>Jamie Howard</h1>
 			<ul class="nav nav-pills">
-			  <li role="presentation" class="active"><a href="#/about">About</a></li>
-			  <li role="presentation"><a href="#/about">About</a></li>
-			  <li role="presentation"><a href="#/portfolio">Portfolio</a></li>
-			  <li role="presentation"><a href="#/services">Services</a></li>
-			  <li role="presentation"><a href="#/weddings">Weddings</a></li>
-			  <li role="presentation"><a href="#/blog">Blog</a></li>
-			  <li role="presentation"><a href="#/contact">Contact</a></li>
-			  <li role="presentation"><a href="#/login">Login</a></li>
+			  <li role="presentation" ng-class="{active:tab}"><a href="#/home">Home</a></li>
+			  <li role="presentation" ng-class="{active:tab}"><a href="#/about">About</a></li>
+			  <li role="presentation"  ng-class="{active:tab}"><a href="#/portfolio">Portfolio</a></li>
+			  <li role="presentation" ng-class="{active:tab}"><a href="#/services">Services</a></li>
+			  <li role="presentation" ng-class="{active:tab}"><a href="#/weddings">Weddings</a></li>
+			  <li role="presentation" ng-class="{active:tab}"><a href="#/blog">Blog</a></li>
+			  <li role="presentation" ng-class="{active:tab}"><a href="#/contact">Contact</a></li>
+			  <li role="presentation" ng-class="{active:tab}"><a href="#/login">Login</a></li>
 			</ul>		
 		</div>
 		<hr>
