--- a/home/home.html
+++ b/home/home.html
@@ -1,2 +1,17 @@
-{{testHome}}
+<div class="container">
+	<div class="col-sm-6">
+		<h3>About</h3>
+		<h3>Portfolio</h3>
+		<h3>Services</h3>
+		<h3>Weddings</h3>
+		<h3>blog</h3>
+		<h3>Contact</h3>
 
+	</div>
+</div>
+
+<!-- Items to complete with this view:
+Link headers tag to its corresponding view. 
+Include picture with each item
+create carousel animation going through various images
+Move around the header tags -->
