--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 			<h1>Jamie Howard</h1>
 			<ul class="nav nav-pills">
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/home">Home</a></li>
+			  <li role="presentation" ng-class="{active:tab}"><a href="#/">Home</a></li>
 			  <li role="presentation" ng-class="{active:tab}"><a href="#/about">About</a></li>
 			  <li role="presentation"  ng-class="{active:tab}"><a href="#/portfolio">Portfolio</a></li>
 			  <li role="presentation" ng-class="{active:tab}"><a href="#/services">Services</a></li>
