phase 1, removing bogus login

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en' ng-app='noServer'>
 	<head>
-		<title>No Server Project</title>
+		<title>Jamie Howard salt lake city hair and makeup artist</title>
 		<meta charset='utf-8'>
 		<link href='css/bootstrap.css' rel='stylesheet'>
 		<link href='css/style.css' rel='stylesheet'>
@@ -25,7 +25,7 @@
 			  <li role="presentation" ng-class="{active:tab}"><a href="#/weddings">Weddings</a></li>
 			  <li role="presentation" ng-class="{active:tab}"><a href="#/blog">Blog</a></li>
 			  <li role="presentation" ng-class="{active:tab}"><a href="#/contact">Contact</a></li>
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/login">Login</a></li>
+<!-- 			  <li role="presentation" ng-class="{active:tab}"><a href="#/login">Login</a></li> -->
 			</ul>		
 		</div>
 		<hr>
