--- a/login/login.html
+++ b/login/login.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <div class="jumbotron col-md-6 col-md-offset-3 dash-head">
         <a href="" ng-click="showReg()">{{status}}</a>
         <div ng-show="!reg">
@@ -11,9 +11,9 @@
             </form>
         </div>
         <div ng-show="reg">
-            <h2>Register</h2>
+            <h2>Register</h2> -->
             <!-- This is Step One Of Registration-->
-            <form ng-submit="register()"> 
+<!--             <form ng-submit="register()"> 
                 <p ng-show="error" class="text-danger">{{ error }}</p>
                 <input class="form-control" type="text" placeholder="Full Name" ng-model="details.name" required /><br />
                 <input class="form-control" type="email" placeholder="Email" ng-model="details.email" required /><br />
@@ -22,5 +22,5 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
 
