--- a/index.html
+++ b/index.html
@@ -3,33 +3,29 @@
 	<head>
 		<title>Jamie Howard salt lake city hair and makeup artist</title>
 		<meta charset='utf-8'>
-		<link href='css/bootstrap.css' rel='stylesheet'>
-		<link href='css/style.css' rel='stylesheet'>
-		<link href='js/bootstrap.js' rel='javascript'>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
-		<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-		<script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
 
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
+		<link href='css/bootstrap.css' rel='stylesheet'>
+		<link href='js/bootstrap.js' rel='javascript'>
+		<link href='css/style.css' rel='stylesheet'>
 	</head>
 		<div class="container">
-
-	<body>
+			<body>
 
 			<h1>Jamie Howard</h1>
-			<ul class="nav nav-pills">
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/">Home</a></li>
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/about">About</a></li>
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/portfolio">Portfolio</a></li>
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/services">Services</a></li>
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/weddings">Weddings</a></li>
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/blog">Blog</a></li>
-			  <li role="presentation" ng-class="{active:tab}"><a href="#/contact">Contact</a></li>
-<!-- 			  <li role="presentation" ng-class="{active:tab}"><a href="#/login">Login</a></li> -->
-			</ul>		
+				<ul class="nav nav-pills">
+				  <li role="presentation" ng-class="{active:tab}"><a href="#/">Home</a></li>
+				  <li role="presentation" ng-class="{active:tab}"><a href="#/about">About</a></li>
+				  <li role="presentation" ng-class="{active:tab}"><a href="#/portfolio">Portfolio</a></li>
+				  <li role="presentation" ng-class="{active:tab}"><a href="#/services">Services</a></li>
+				  <li role="presentation" ng-class="{active:tab}"><a href="#/weddings">Weddings</a></li>
+<!-- 				  <li role="presentation" ng-class="{active:tab}"><a href="#/blog">Blog</a></li> -->
+				  <li role="presentation" ng-class="{active:tab}"><a href="#/contact">Contact</a></li>
+	<!-- 			  <li role="presentation" ng-class="{active:tab}"><a href="#/login">Login</a></li> -->
+				</ul>		
 		</div>
 		<hr>
-
 
 		<div class='view-container'>
 			<ng-view></ng-view>
