--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 		<link href='js/bootstrap.js' rel='javascript'>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
-		<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-		<script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
+<!-- 		// <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+		// <script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script> -->
 <!--
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
