--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
 		<title>Jamie Howard salt lake city hair and makeup artist</title>
 		<meta charset='utf-8'>
 
-		<link href='css/bootstrap.css' rel='stylesheet'>
+<!--		<link href='css/bootstrap.css' rel='stylesheet'>
 		<link href='css/style.css' rel='stylesheet'>
 		<link href='js/bootstrap.js' rel='javascript'>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
-<!-- 		// <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-		// <script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script> -->
-<!--
+		<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
+		<script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
+-->
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -21,7 +21,6 @@
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
     	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.2.1/bootstrap-social.min.css" />
     	<link rel="stylesheet" type="text/css" href="css/style.css" />
--->
 
 	</head>
 		<div class="container">
