adding hover css

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 		<link href='css/bootstrap.css' rel='stylesheet'>
 		<link href='css/style.css' rel='stylesheet'>
-		<link href='js/bootstrap.js' rel='javascript'>
+		<link href="css/hover.css" rel="stylesheet" media="all">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
 		
