--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
 		</div>
 	
 	<script src="js/app.js"></script>
+	<script src="./js/scripts/ui-bootstrap-tpls-0.11.0.min.js"></script>
 	<script src="js/controllers/aboutCtrl.js"></script>
 	<script src="js/controllers/contactCtrl.js"></script>
 	<script src="js/controllers/homeCtrl.js"></script>
