--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 		<link href="css/hover.css" rel="stylesheet" media="all">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.min.js"></script>
+	    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+	    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/4.2.1/bootstrap-social.min.css">		
 		
 <!--
 		<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
